fix select + icon + clear spacing (#903)
* fix select + icon + clear spacing

* update styles

* revert

--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -136,11 +136,15 @@
 }
 
 .suffix::slotted(*) {
-  margin-inline-start: var(--wa-space-sm);
+  margin-inline-start: var(--wa-space-s);
 }
 
 .prefix::slotted(*) {
   margin-inline-end: var(--wa-space);
+}
+
+:host([multiple]) .prefix::slotted(*) {
+  margin-inline: var(--wa-space);
 }
 
 /* Clear button */
